--- a/index.html
+++ b/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Landing Page</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div class="header">
+            <nav>
+                <a href="#">Header Logo</a>
+                <ul>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </nav>
+            <div class="header-content">
+                <div class="intro">
+                    <h1>This website is awesome</h1>
+                    <p class="intro-text">This is some subtext</p>
+                    <button class="intro-btn">Sign Up</button>
+                </div>
+                <img class="intro-img" src="" alt="">
+            </div>
+        </div>
+        <div class="info">
+            <h2>Some Random Information</h2>
+            <div class="info-content">
+                <div class="card">
+                    <img class="card-img" src="" alt="">
+                    <p class="card-text">Some text</p>
+                </div>
+                <div class="card">
+                    <img class="card-img" src="" alt="">
+                    <p class="card-text">Some text</p>
+                </div>
+                <div class="card">
+                    <img class="card-img" src="" alt="">
+                    <p class="card-text">Some text</p>
+                </div>
+                <div class="card">
+                    <img class="card-img" src="" alt="">
+                    <p class="card-text">Some text</p>
+                </div>
+            </div>
+        </div>
+        <div class="quote">
+            <p class="quote-text">Mandem</p>
+            <p class="quote-source">God of Thunder</p>
+        </div>
+        <div class="cta">
+            <div class="cta-content">
+                <h3>Call to action</h3>
+                <p class="cta-text">Sign up to our product</p>
+            </div>
+            <button class="cta-btn">Sign Up</button>
+        </div>
+        <footer>
+            Copyright © Andrei Shushpanov 2023
+        </footer>
+    </body>
 </html>
