--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     <body>
         <div class="header">
             <nav>
-                <a href="#">Header Logo</a>
+                <a class="logo" href="#">Header Logo</a>
                 <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
                 </ul>
             </nav>
             <div class="header-content">
                 <div class="intro">
-                    <h1>This website is awesome</h1>
-                    <p class="intro-text">This is some subtext</p>
+                    <p>This website is awesome</p>
+                    <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et bibendum lacus. Praesent pellentesque, orci sit amet rhoncus lobortis, turpis orci mollis quam, et volutpat nisl ante eu felis. Nullam sapien arcu, mattis a tincidunt nec, ornare vel sapien.</p>
                     <button class="intro-btn">Sign Up</button>
                 </div>
-                <img class="intro-img" src="" alt="">
+                <img class="intro-img" src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1473&q=80" alt="">
             </div>
         </div>
         <div class="info">
-            <h2>Some Random Information</h2>
+            <p>Some Random Information</p>
             <div class="info-content">
                 <div class="card">
                     <img class="card-img" src="" alt="">
@@ -53,7 +53,7 @@
         </div>
         <div class="cta">
             <div class="cta-content">
-                <h3>Call to action</h3>
+                <p>Call to action</p>
                 <p class="cta-text">Sign up to our product</p>
             </div>
             <button class="cta-btn">Sign Up</button>
