Adjust the max-width, justify-content, margin for header

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="info">
-            <p>Some Random Information</p>
+            <p class="info-title">Some Random Information</p>
             <div class="info-content">
                 <div class="card">
                     <img class="card-img" src="" alt="">
