Add styling to info and cta section

--- a/index.html
+++ b/index.html
@@ -30,26 +30,28 @@
             <p class="info-title">Some Random Information</p>
             <div class="info-content">
                 <div class="card">
-                    <img class="card-img" src="" alt="">
-                    <p class="card-text">Some text</p>
+                    <img class="card-img" src="https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="">
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div class="card">
-                    <img class="card-img" src="" alt="">
-                    <p class="card-text">Some text</p>
+                    <img class="card-img" src="https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="">
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div class="card">
-                    <img class="card-img" src="" alt="">
-                    <p class="card-text">Some text</p>
+                    <img class="card-img" src="https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="">
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div class="card">
-                    <img class="card-img" src="" alt="">
-                    <p class="card-text">Some text</p>
+                    <img class="card-img" src="https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="">
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
         </div>
         <div class="quote">
-            <p class="quote-text">Mandem</p>
-            <p class="quote-source">God of Thunder</p>
+            <div class="quote-container">
+                <p class="quote-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et bibendum lacus. Praesent pellentesque, orci sit amet rhoncus lobortis, turpis orci mollis quam, et volutpat nisl ante eu felis. Nullam sapien arcu, mattis a tincidunt nec, ornare vel sapien. Donec consequat vel felis eget tincidunt. Sed purus eros, blandit in condimentum ut, efficitur laoreet odio. </p>
+                <p class="quote-source">-Andrei Shushpanov, God of CSS</p>
+            </div>
         </div>
         <div class="cta">
             <div class="cta-content">
