Complete the template ver. of project

--- a/index.html
+++ b/index.html
@@ -55,10 +55,14 @@
         </div>
         <div class="cta">
             <div class="cta-content">
-                <p>Call to action</p>
-                <p class="cta-text">Sign up to our product</p>
+                <div class="cta-container">
+                    <div class="cta-text-container">
+                        <p class="cta-header">Call to action!</p>
+                        <p class="cta-text">Sign up to our product</p>
+                    </div>
+                    <button class="cta-btn">Sign Up</button>
+                </div>
             </div>
-            <button class="cta-btn">Sign Up</button>
         </div>
         <footer>
             Copyright © Andrei Shushpanov 2023
