Format HTML and CSS

--- a/index.html
+++ b/index.html
@@ -1,71 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Landing Page</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <div class="header">
-            <nav>
-                <a class="logo" href="#">Header Logo</a>
-                <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
-                </ul>
-            </nav>
-            <div class="header-content">
-                <div class="intro">
-                    <p>This website is awesome</p>
-                    <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et bibendum lacus. Praesent pellentesque, orci sit amet rhoncus lobortis, turpis orci mollis quam, et volutpat nisl ante eu felis. Nullam sapien arcu, mattis a tincidunt nec, ornare vel sapien.</p>
-                    <button class="intro-btn">Sign Up</button>
-                </div>
-                <img class="intro-img" src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1473&q=80" alt="">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+    <div class="header">
+        <nav>
+            <a class="logo" href="#">Header Logo</a>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </nav>
+        <div class="header-content">
+            <div class="intro">
+                <p>This website is awesome</p>
+                <p class="intro-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Nulla et bibendum lacus. Praesent pellentesque, orci sit
+                    amet rhoncus lobortis, turpis orci mollis quam, et
+                    volutpat nisl ante eu felis. Nullam sapien arcu, mattis
+                    a tincidunt nec, ornare vel sapien.
+                </p>
+                <button class="intro-btn">Sign Up</button>
+            </div>
+            <img class="intro-img"
+                src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1473&q=80"
+                alt="" />
+        </div>
+    </div>
+    <div class="info">
+        <p class="info-title">Some Random Information</p>
+        <div class="info-content">
+            <div class="card">
+                <img class="card-img"
+                    src="https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+                    alt="" />
+                <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+            </div>
+            <div class="card">
+                <img class="card-img"
+                    src="https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+                    alt="" />
+                <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+            </div>
+            <div class="card">
+                <img class="card-img"
+                    src="https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+                    alt="" />
+                <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+            </div>
+            <div class="card">
+                <img class="card-img"
+                    src="https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+                    alt="" />
+                <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
             </div>
         </div>
-        <div class="info">
-            <p class="info-title">Some Random Information</p>
-            <div class="info-content">
-                <div class="card">
-                    <img class="card-img" src="https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="">
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+    <div class="quote">
+        <div class="quote-container">
+            <p class="quote-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Nulla et bibendum lacus. Praesent pellentesque, orci sit
+                amet rhoncus lobortis, turpis orci mollis quam, et volutpat
+                nisl ante eu felis. Nullam sapien arcu, mattis a tincidunt
+                nec, ornare vel sapien. Donec consequat vel felis eget
+                tincidunt. Sed purus eros, blandit in condimentum ut,
+                efficitur laoreet odio.
+            </p>
+            <p class="quote-source">-Andrei Shushpanov, God of CSS</p>
+        </div>
+    </div>
+    <div class="cta">
+        <div class="cta-content">
+            <div class="cta-container">
+                <div class="cta-text-container">
+                    <p class="cta-header">Call to action!</p>
+                    <p class="cta-text">Sign up to our product</p>
                 </div>
-                <div class="card">
-                    <img class="card-img" src="https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="">
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-                <div class="card">
-                    <img class="card-img" src="https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="">
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-                <div class="card">
-                    <img class="card-img" src="https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="">
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
+                <button class="cta-btn">Sign Up</button>
             </div>
         </div>
-        <div class="quote">
-            <div class="quote-container">
-                <p class="quote-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et bibendum lacus. Praesent pellentesque, orci sit amet rhoncus lobortis, turpis orci mollis quam, et volutpat nisl ante eu felis. Nullam sapien arcu, mattis a tincidunt nec, ornare vel sapien. Donec consequat vel felis eget tincidunt. Sed purus eros, blandit in condimentum ut, efficitur laoreet odio. </p>
-                <p class="quote-source">-Andrei Shushpanov, God of CSS</p>
-            </div>
-        </div>
-        <div class="cta">
-            <div class="cta-content">
-                <div class="cta-container">
-                    <div class="cta-text-container">
-                        <p class="cta-header">Call to action!</p>
-                        <p class="cta-text">Sign up to our product</p>
-                    </div>
-                    <button class="cta-btn">Sign Up</button>
-                </div>
-            </div>
-        </div>
-        <footer>
-            Copyright © Andrei Shushpanov 2023
-        </footer>
-    </body>
+    </div>
+    <footer>Copyright © Andrei Shushpanov 2023</footer>
+</body>
+
 </html>
